# rusip

./: .gitignore  .travis.yml  .vimrc  Cargo.toml  README.md  build.rs
benches/: abnf.rs  parse.rs
docs/: index.md  understanding_sip.md
src/: lib.rs  sip_abnf.rs
src/msg/: abnf.rs  id.rs  message.rs  method.rs  mod.rs  parse.rs  parser_aux.rs  reason_code.rs  request.rs  response.rs  uri.rs  version.rs
src/msg/abnf/: absolute_uri.rs  ch.rs  digit.rs  host.rs  ip.rs  mod.rs  uri_headers.rs  uri_params.rs  userinfo.rs
src/msg/headers/: call_id.rs  cseq.rs  from.rs  header.rs  max_forwards.rs  mod.rs  to.rs  via.rs
