[package]
name = "rusip"
version = "0.1.0"
authors = ["Mikhail Pokhikhilov <thedilletante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nom]
version = "^5"

[dev-dependencies]
rand = "0.7"