[package]
name = "rusip"
version = "0.1.0"
authors = ["Mikhail Pokhikhilov <thedilletante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nom]
version = "^5"

[dev-dependencies]
rand = "0.7"
bencher = "0.1.5"
parsip = "0.1.0" # for comparison

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "abnf"
harness = false

[profile.abnf]
lto = true
codegen-units = 1
opt-level = 3